[package]
name = "pangolin-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "EVM chain adapter — direct submit; signed-revision builder; no relay layer."

[lints]
workspace = true

[features]
# Exposes `MockChainAdapter` to downstream crates for their own tests.
# Production downstream consumers MUST NOT enable this feature; doing so
# would let the chain adapter be substituted with the in-memory mock at
# the boundary between `pangolin-store`/`pangolin-cli` and the real
# `BaseSepoliaAdapter`. The feature is named to mirror similar
# `test-utilities` flags in tokio/serde/etc.
test-utilities = []

# Network-dependent end-to-end tests under `tests/integration.rs` are
# gated behind this feature so the default `cargo test --workspace
# --lib` does not attempt to reach `https://sepolia.base.org`. CI runs
# without this feature; humans enable it for manual smoke verification.
# Mirrors the same flag on `tools/chaincli`.
integration-tests = []

[dependencies]
# alloy — modern async EVM client. Same workspace pin as `tools/chaincli/`
# (P6); the dep set is shared because the audit surface is the same.
# `pangolin-chain` does NOT pull `alloy-signer-local` directly — it only
# needs the `signers` feature on the umbrella `alloy` crate, plus the
# crypto plumbing imported through the standard alloy entry. The
# Foundry-keystore decryption path comes in via `alloy-signer-local`
# (workspace dep) used in the `new_with_keystore` constructor only.
alloy              = { workspace = true }
alloy-signer-local = { workspace = true }

# Async machinery. `tokio` here uses the same workspace-pinned features
# as chaincli; the Send+Sync trait shape requires `rt-multi-thread`.
tokio              = { workspace = true }
async-trait        = { workspace = true }

# Local Pangolin crates.
#
# `pangolin-crypto` is consumed for `DeviceKey` (revision signing,
# evm-wallet derivation source), `Signature` / `VerifyingKey` (signed-
# revision verification path), and `SecretBytes` (keystore-password
# argument). NO secret material crosses out of `pangolin-crypto`; only
# the publicly-defined accessors on `DeviceKey` are used.
#
# `pangolin-chain` does NOT depend on `pangolin-store` — the dep
# direction is reversed (pangolin-store → pangolin-chain) so
# `ChainAnchor` can live canonically here and be re-exported by
# pangolin-store. See `docs/issue-plans/P7.md` success criterion 6.
pangolin-crypto = { path = "../pangolin-crypto" }

# Errors. `thiserror` derives `Display` + `Error`; we hand-write
# `Debug` on every payload-bearing variant so secret material cannot
# leak through `{:?}`.
thiserror          = { workspace = true }

# Hex encoding for the `Display` impl on `RevisionEvent` and friends —
# never used to decode untrusted input (HIGH-2 discipline).
hex                = { workspace = true }

# HKDF-SHA256 for the Ed25519 → secp256k1 wallet derivation in
# `evm.rs`. Same workspace pin pangolin-crypto uses (HKDF + SHA-2 from
# RustCrypto); naming both crates as direct deps keeps the audit
# surface explicit (no transitive-only access).
hkdf               = { workspace = true }
sha2               = { workspace = true }
# Inline OKM-buffer wipe in `evm.rs`. Already pulled transitively via
# pangolin-crypto; named here directly for the same hygiene reason.
zeroize            = { workspace = true }

# JSON tree-walking for the deployment-file loader in `base_sepolia.rs`.
# Read-only; pangolin-chain does NOT structurally deserialize chain
# payload bytes (per the audit constraint). Same workspace pin
# `tools/chaincli/` uses.
serde_json         = { workspace = true }

[dev-dependencies]
# Test fixtures need `tempfile` for keystore decryption tests and
# `pangolin-store` integration tests with on-disk vault files.
tempfile           = { workspace = true }
# `#[tokio::test]` for async test cases. Workspace-pinned at the same
# version chaincli/pangolin-chain use; full-features off (we only need
# `macros` for the attribute and `rt` for the single-thread executor
# default). The `rt-multi-thread` + `macros` features inherited from
# the workspace pin cover both.
tokio              = { workspace = true }
# `pangolin-store` test-utilities feature exposes the deterministic-
# clock and presence-proof helpers we need to drive a `Vault` through
# the chain anchor flow without a real session prompt.
pangolin-store     = { path = "../pangolin-store", features = ["test-utilities"] }
# Self-feature for tests so `MockChainAdapter` is reachable without an
# external feature flag. Mirrors the pattern in
# `crates/pangolin-store/Cargo.toml` for `test-utilities`.
pangolin-chain     = { path = ".", features = ["test-utilities"] }
# MVP-2 issue #99 hermetic WS test harness (`tests/ws_mock_server.rs`
# + `tests/hermetic_ws.rs`). Both crates are already in the production
# dep tree via `alloy::providers::ws` (-> `alloy-transport-ws` ->
# `tokio-tungstenite` + `futures-util`), so naming them here as
# dev-deps introduces NO new external crate. Pinned `=X.Y.Z` to the
# exact versions resolved in `Cargo.lock` so a future alloy bump
# doesn't quietly drift the mock-server's tree. tokio-tungstenite's
# `connect` feature is not needed (the mock is server-only); the
# default features cover `accept_async` + `WebSocketStream`.
tokio-tungstenite  = { version = "=0.28.0", default-features = false }
futures-util       = { version = "=0.3.32", default-features = false, features = ["std", "sink"] }
# JSON-RPC framing on the mock server side. The mock parses incoming
# eth_subscribe requests + emits eth_subscription notifications by
# hand to keep its scope tiny; same workspace pin already used by
# `pangolin-chain`'s production deployment-file loader.
serde_json         = { workspace = true }
# Issue #107 — the filter-respecting hermetic mock transport
# (`chain_sync::filtering_asserter`) needs the low-level JSON-RPC
# request/response types + the `Transport` (tower::Service) trait.
# These crates are ALREADY in the production dep tree via `alloy`'s
# `provider-ws` + `pubsub` feature set (resolved transitively through
# `alloy-provider` → `alloy-rpc-client` → `alloy-json-rpc` /
# `alloy-transport`), so naming them here as dev-deps introduces NO
# new external crate. `tower` is likewise transitively present (the
# alloy MockTransport already uses `tower::Service<RequestPacket>`).
# Pinned `=X.Y.Z` to the exact versions resolved in `Cargo.lock` so
# a future alloy bump doesn't quietly drift the smart-mock's tree.
alloy-json-rpc     = { version = "=2.0.4", default-features = false }
alloy-transport    = { version = "=2.0.4", default-features = false }
tower              = { version = "=0.5.3", default-features = false }
