[package]
name = "pangolin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Pangolin CLI — thin shell over pangolin-core for PoC and developer use."

[[bin]]
name = "pangolin"
path = "src/main.rs"

[dependencies]
pangolin-core = { path = "../pangolin-core" }

[lints]
workspace = true
