[package]
name = "pangolin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Pangolin core vault engine — single source of truth for security-critical logic."

[lints]
workspace = true

[dependencies]
# MVP-1 issue 1.1 (Q2): the Vault / session / account / revision types
# physically live in `pangolin-store` until issue 1.4 relocates them.
# `pangolin-core` re-exports them so the FFI surface can name everything
# under `pangolin_core::*` and the namespace freezes at this issue. The
# dep arrow is one-way (core → store, never the reverse) so HIGH-1 and
# the workspace circular-dep prohibition both hold.
pangolin-store  = { path = "../pangolin-store" }
# MVP-1 issue 1.8 — the password generator's only entropy source is the
# OS CSPRNG, reached through `pangolin_crypto::rng::fill_random` (the
# audited chokepoint; the deterministic-RNG surface is crate-private per
# MEDIUM-11). `pangolin-store` already pulls `pangolin-crypto`, so this
# adds no new transitive — it just names the dep directly. Arrow is
# core → crypto (never the reverse), so HIGH-1 holds.
pangolin-crypto = { path = "../pangolin-crypto" }
thiserror       = { workspace = true }
zeroize         = { workspace = true }
# MVP-1 issue 1.8 — zxcvbn-style password-strength estimator for
# arbitrary (typed/imported) passwords. A heuristic estimator (not a
# parser of attacker-structured data), so it lives in `pangolin-core`'s
# tree, not a blast-contained sibling crate. `no_unsafe = true`,
# MIT/Apache. `=`-pinned + `Cargo.lock` committed; `deny.toml` is a
# denylist, not an allowlist, so no entry is needed (none of zxcvbn's
# transitives are denied). HIGH-1 holds by the directional dep arrow
# (core → ..., never the reverse) so `pangolin-crypto`'s tree is
# unaffected.
zxcvbn         = { version = "=3.1.1", default-features = false }
