[package]
name = "pangolin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Pangolin core vault engine — single source of truth for security-critical logic."

[lints]
workspace = true

[features]
# MVP-3 issue #106c: gates the coupled multi-device anvil E2E
# (`tests/anvil_device_e2e.rs`) — the centerpiece regression gate that ties
# the RevisionLogV2 chain client (#106c) + the pairing handoff (#106b-1) +
# the VDK rotation (#106b-2) end-to-end against a live local anvil. The
# `#[ignore]`'d test never runs in the default `cargo test`; it is driven by
# `scripts/anvil-ci.sh`. Enabling it pulls `pangolin-chain`'s
# `integration-tests` feature (for `test_env`) — both are dev-only + path
# deps already in the lockfile, so this adds NO new external crate.
integration-tests = ["pangolin-chain/integration-tests"]

[dependencies]
# MVP-1 issue 1.1 (Q2): the Vault / session / account / revision types
# physically live in `pangolin-store` until issue 1.4 relocates them.
# `pangolin-core` re-exports them so the FFI surface can name everything
# under `pangolin_core::*` and the namespace freezes at this issue. The
# dep arrow is one-way (core → store, never the reverse) so HIGH-1 and
# the workspace circular-dep prohibition both hold.
pangolin-store  = { path = "../pangolin-store" }
# MVP-1 issue 1.8 — the password generator's only entropy source is the
# OS CSPRNG, reached through `pangolin_crypto::rng::fill_random` (the
# audited chokepoint; the deterministic-RNG surface is crate-private per
# MEDIUM-11). `pangolin-store` already pulls `pangolin-crypto`, so this
# adds no new transitive — it just names the dep directly. Arrow is
# core → crypto (never the reverse), so HIGH-1 holds.
pangolin-crypto = { path = "../pangolin-crypto" }
thiserror       = { workspace = true }
zeroize         = { workspace = true }
# MVP-1 issue 1.8 — zxcvbn-style password-strength estimator for
# arbitrary (typed/imported) passwords. A heuristic estimator (not a
# parser of attacker-structured data), so it lives in `pangolin-core`'s
# tree, not a blast-contained sibling crate. `no_unsafe = true`,
# MIT/Apache. `=`-pinned + `Cargo.lock` committed; `deny.toml` is a
# denylist, not an allowlist, so no entry is needed (none of zxcvbn's
# transitives are denied). HIGH-1 holds by the directional dep arrow
# (core → ..., never the reverse) so `pangolin-crypto`'s tree is
# unaffected.
zxcvbn         = { version = "=3.1.1", default-features = false }

[dev-dependencies]
# MVP-3 issue #104b: ≥1024-case proptest over the onboard→recover
# orchestration round-trip (mirrors the keys.rs / escrow tests.rs
# discipline). `proptest` is the workspace-pinned dev-dependency the
# crypto/store crates already use; naming it here adds NO new external
# crate (it is in the lockfile + dev-only, so it never ships in any
# production artifact — the #104b "zero new deps" bar concerns
# production deps). HIGH-1 holds: this is a dev-dep on `pangolin-core`,
# which is downstream of `pangolin-crypto`, so it cannot affect the
# crypto crate's serde-free tree.
proptest = { workspace = true }
# MVP-3 issue #106c: the coupled anvil E2E drives the RevisionLogV2 chain
# client + the test_env harness seam. `pangolin-chain` is already in the
# lockfile (a workspace member, pulled transitively via `pangolin-store`);
# naming it as a dev-dep adds NO new external crate. `test-utilities` is
# needed for `Vault::__test_commit_vdk_rotation_reusing_active`; the
# `integration-tests` feature (for `test_env`) is enabled via this crate's
# own `integration-tests` feature. Dev-only — never ships in any production
# artifact.
pangolin-chain = { path = "../pangolin-chain", features = ["test-utilities"] }
pangolin-store = { path = "../pangolin-store", features = ["test-utilities"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
# Dev-only temp dir for the #106c E2E's local vault. Already in the
# lockfile (store/chain use it); naming it here adds NO new external crate.
tempfile = { workspace = true }
