[package]
name = "pangolin-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Cryptographic primitives — AEAD, KDF, signing, key wrapping. Reuses vetted libraries; never invents."

[lints]
workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
argon2            = { workspace = true }
ed25519-dalek     = { workspace = true }
hkdf              = { workspace = true }
sha2              = { workspace = true }
zeroize           = { workspace = true }
secrecy           = { workspace = true }
subtle            = { workspace = true }
rand_core         = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex      = { workspace = true }
