[package]
name = "pangolin-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Cryptographic primitives — AEAD, KDF, signing, key wrapping. Reuses vetted libraries; never invents."

[lints]
workspace = true

[features]
# Gates tests that intentionally exercise the locked KDF parameters
# (256 MiB / t=3) — too slow for the default `cargo test` lane, but
# critical for end-of-issue regression sweeps. Run with:
#   cargo test --features slow-tests
slow-tests = []

[dependencies]
chacha20poly1305 = { workspace = true }
argon2            = { workspace = true }
ed25519-dalek     = { workspace = true }
hkdf              = { workspace = true }
sha2              = { workspace = true }
zeroize           = { workspace = true }
subtle            = { workspace = true }
rand_core         = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex      = { workspace = true }
