[package]
name = "pangolin-funder-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Client for the Pangolin funder service — requests gas top-ups; never holds vault keys."

[lints]
workspace = true
