[package]
name = "pangolin-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Ephemeral local indexer — auto-deletes its temp DB when sync completes. No persistent service."

[lints]
workspace = true
