[package]
name = "pangolin-kdbx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "KDBX (KeePass) import for Pangolin. Scaffolded by MVP-1 issue 1.1; body lands in 1.9."

[lints]
workspace = true
